--- a/ads-leadership.html
+++ b/ads-leadership.html
@@ -386,7 +386,7 @@
         <div class="message-content">
             <p>The Austin Dermatological Society was founded to reflect and advance this reality. ADS brings together the full spectrum of dermatologic practice—medical, surgical, cosmetic dermatology, Mohs and reconstructive surgery, dermatopathology, and emerging technologies—within a professional community that values academic rigor, collaboration, and forward-looking leadership.</p>
 
-            <p>Advances in artificial intelligence, robotics, imaging, digital pathology, data-driven diagnostics, and automation are rapidly reshaping how dermatology is practiced, delivered, and scaled. At the same time, dermatologists are navigating increasingly complex decisions related to practice growth, financial planning, workforce development, and long-term sustainability. ADS is committed to supporting our members at this intersection of clinical science, technology, and business strategy.</p>
+            <p>Advances in Artificial Intelligence (AI), robotics, imaging, digital pathology, data-driven diagnostics, and automation are rapidly reshaping how dermatology is practiced, delivered, and scaled. At the same time, dermatologists are navigating increasingly complex decisions related to practice growth, financial planning, workforce development, and long-term sustainability. ADS is committed to supporting our members at this intersection of clinical science, technology, and business strategy.</p>
 
             <h3>Presidential Vision</h3>
             <p>As President, my vision for ADS is to cultivate a society that embodies Austin's strengths:</p>
