--- a/ads-leadership.html
+++ b/ads-leadership.html
@@ -384,7 +384,7 @@
     <section class="message-section">
         <h2>Full Presidential Message</h2>
         <div class="message-content">
-            <p>The Austin Dermatological Society was founded to reflect and advance this reality. ADS brings together the full spectrum of dermatologic practice—medical, surgical, cosmetic dermatology, Mohs and reconstructive surgery, dermatopathology, and emerging technologies—within a professional community that values academic rigor, collaboration, and forward-looking leadership.</p>
+            <p>The Austin Dermatological Society was founded in 1975 to uphold and advance a shared commitment to clinical excellence, continuous education, ethical standards, and collaborative learning—educating one another while learning from leaders beyond medicine in business, entrepreneurship, and finance—to become more well-rounded physicians and better serve our patients and community. ADS brings together the full spectrum of dermatologic practice—medical, surgical, cosmetic dermatology, Mohs and reconstructive surgery, dermatopathology, and emerging technologies—within a professional community that values academic rigor, collaboration, and forward-looking leadership.</p>
 
             <p>Advances in Artificial Intelligence (AI), robotics, imaging, digital pathology, data-driven diagnostics, and automation are rapidly reshaping how dermatology is practiced, delivered, and scaled. At the same time, dermatologists are navigating increasingly complex decisions related to practice growth, financial planning, workforce development, and long-term sustainability. ADS is committed to supporting our members at this intersection of clinical science, technology, and business strategy.</p>
 
