--- a/ads-leadership.html
+++ b/ads-leadership.html
@@ -375,7 +375,7 @@
             <div class="intro-text">
                 <h2>Message from the President</h2>
                 <p>Welcome to the Austin Dermatological Society.</p>
-                <p>Austin stands at the crossroads of medicine, technology, and entrepreneurship. As a global hub for innovation—particularly in artificial intelligence, robotics, data science, and applied engineering—Austin offers a unique environment in which healthcare professionals are increasingly expected to think not only as clinicians, but also as leaders, innovators, and strategic decision-makers.</p>
+                <p>Austin stands at the crossroads of medicine, technology, and entrepreneurship. As a global hub for innovation - particularly in Artificial Intelligence (AI), robotics, data science, and applied engineering = Austin offers a unique environment in which healthcare professionals are increasingly expected to think not only as clinicians, but also as leaders, innovators, and strategic decision-makers.</p>
                 <p class="signature">— Quoc-Bao Nguyen, MD</p>
             </div>
         </div>
@@ -384,7 +384,7 @@
     <section class="message-section">
         <h2>Full Presidential Message</h2>
         <div class="message-content">
-            <p>The Austin Dermatological Society was founded in 1975 to uphold and advance a shared commitment to clinical excellence, continuous education, ethical standards, and collaborative learning—educating one another while learning from leaders beyond medicine in business, entrepreneurship, and finance—to become more well-rounded physicians and better serve our patients and community. ADS brings together the full spectrum of dermatologic practice—medical, surgical, cosmetic dermatology, Mohs and reconstructive surgery, dermatopathology, and emerging technologies—within a professional community that values academic rigor, collaboration, and forward-looking leadership.</p>
+            <p>The Austin Dermatological Society was founded in 1975 to uphold and advance a shared commitment to clinical excellence, continuous education, ethical standards, and collaborative learning - educating one another while learning from leaders beyond medicine in business, entrepreneurship, and finance - to become more well-rounded physicians and better serve our patients and community. ADS brings together the full spectrum of dermatologic practice - medical, surgical, cosmetic dermatology, Mohs and reconstructive surgery, dermatopathology, and emerging technologies - within a professional community that values academic rigor, collaboration, and forward-looking leadership.</p>
 
             <p>Advances in Artificial Intelligence (AI), robotics, imaging, digital pathology, data-driven diagnostics, and automation are rapidly reshaping how dermatology is practiced, delivered, and scaled. At the same time, dermatologists are navigating increasingly complex decisions related to practice growth, financial planning, workforce development, and long-term sustainability. ADS is committed to supporting our members at this intersection of clinical science, technology, and business strategy.</p>
 
@@ -396,7 +396,7 @@
                 <li>Collaboration driven by shared purpose</li>
             </ul>
 
-            <p>Our society is uniquely positioned to engage with the broader intellectual ecosystem of Austin, including the research, executive education, and interdisciplinary collaboration fostered by The University of Texas at Austin and Dell Medical School. These institutions exemplify the integration of medicine, engineering, technology, and leadership development—an integration that increasingly defines the future of dermatology.</p>
+            <p>Our society is uniquely positioned to engage with the broader intellectual ecosystem of Austin, including the research, executive education, and interdisciplinary collaboration fostered by The University of Texas at Austin and Dell Medical School. These institutions exemplify the integration of medicine, engineering, technology, and leadership development - an integration that increasingly defines the future of dermatology.</p>
 
             <h3>ADS Priorities</h3>
             <ul>
@@ -405,7 +405,7 @@
                 <li>Professional and business education, including practice management, financial planning, and strategic growth in a technology-driven healthcare environment</li>
             </ul>
 
-            <p>Whether you are a resident training in Austin, an early-career dermatologist building your practice, or an established physician navigating the next phase of professional growth, ADS serves as a trusted professional home—supporting excellence in patient care while preparing our members for the future of dermatology.</p>
+            <p>Whether you are a resident training in Austin, an early-career dermatologist building your practice, or an established physician navigating the next phase of professional growth, ADS serves as a trusted professional home — supporting excellence in patient care while preparing our members for the future of dermatology.</p>
 
             <p>I invite you to engage with the Austin Dermatological Society through our educational programs, mentorship initiatives, and professional community. Together, we will continue to shape a society that reflects the highest standards of dermatology, informed by innovation, leadership, and the distinctive energy of Austin.</p>
 
