--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         .nav-links a:hover, .nav-links a.active { color: var(--gold); }
         
         /* Hamburger Menu */
-        .hamburger { display: none; flex-direction: column; cursor: pointer; padding: 5px; z-index: 1001; }
+        .hamburger { display: none; flex-direction: column; cursor: pointer; padding: 10px; z-index: 1001; }
         .hamburger span { width: 25px; height: 3px; background: var(--navy); margin: 3px 0; transition: all 0.3s; border-radius: 3px; }
         .hamburger.active span:nth-child(1) { transform: rotate(45deg) translate(5px, 5px); }
         .hamburger.active span:nth-child(2) { opacity: 0; }
@@ -654,28 +654,12 @@
         <p class="testimonial-author">— Dr. Quoc-Bao Nguyen</p>
     </section>
 
-     <footer>
-            <p><svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin-right: 8px;">
-        <defs>
-            <linearGradient id="grad-footer-loc" x1="0%" y1="0%" x2="100%" y2="100%">
-                <stop offset="0%" style="stop-color:#c9a961"/>
-                <stop offset="100%" style="stop-color:#d4b976"/>
-            </linearGradient>
-            <filter id="glow-footer">
-                <feGaussianBlur stdDeviation="0.8" result="coloredBlur"/>
-                <feMerge>
-                    <feMergeNode in="coloredBlur"/>
-                    <feMergeNode in="SourceGraphic"/>
-                </feMerge>
-            </filter>
-        </defs>
-        <path d="M10 3 C7 3 5 5 5 7.5 C5 11 10 17 10 17 C10 17 15 11 15 7.5 C15 5 13 3 10 3 Z" 
-              stroke="url(#grad-footer-loc)" stroke-width="1.5" fill="none" filter="url(#glow-footer)"/>
-        <circle cx="10" cy="7.5" r="2" fill="url(#grad-footer-loc)" opacity="0.8"/>
-    </svg>Based in Austin, Texas – Caring for patients nationally and internationally</p>
-            <p>&copy; 2026 Quoc-Bao Nguyen, MD. All rights reserved.</p>
-            <p style="margin-top: 1.5rem;"><a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms of Service</a></p>
-        </footer>
+    <footer>
+        <p>📍 Based in Austin, Texas — Caring for patients nationally and internationally</p>
+        <p>&copy; 2026 Quoc-Bao Nguyen, MD. All rights reserved.</p>
+        <p style="margin-top: 1.5rem;"><a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms of Service</a></p>
+    </footer>
+
     
 </body>
 </html>
