--- a/speaking.html
+++ b/speaking.html
@@ -221,6 +221,15 @@
             <div class="partner-item">Brickell Biotech</div>
             <div class="partner-item">Mayne Pharma</div>
             <div class="partner-item">Cutanea Life Sciences</div>
+            <div class="partner-item">Castle Biosciences</div>
+            <div class="partner-item">Sagis</div>
+            <div class="partner-item">Galderma</div>
+            <div class="partner-item">Neutrogena</div>
+            <div class="partner-item">EltaMD</div>
+            <div class="partner-item">Sanofi Regeneron</div>
+            <div class="partner-item">Allergan Aesthetics</div>
+            <div class="partner-item">Nutrafol</div>
+            <div class="partner-item">Ortho Dermatologics</div>
         </div>
     </section>
 
