--- a/speaking.html
+++ b/speaking.html
@@ -224,6 +224,7 @@
             <div class="partner-item">Castle Biosciences</div>
             <div class="partner-item">Sagis</div>
             <div class="partner-item">Galderma</div>
+            <div class="partner-item">Skinceuticals</div>
             <div class="partner-item">Neutrogena</div>
             <div class="partner-item">EltaMD</div>
             <div class="partner-item">Sanofi Regeneron</div>
