--- a/index.html
+++ b/index.html
@@ -744,6 +744,7 @@
     <circle cx="10" cy="7.5" r="2" fill="url(#grad-footer-loc)" opacity="0.8"/>
 </svg>Based in Austin, Texas – Caring for patients nationally and internationally</p>
         <p>&copy; 2026 Quoc-Bao Nguyen, MD. All rights reserved.</p>
+        <p>Accessibility: If you are vision-impaired or have some other impairment covered by the Americans with Disabilities Act or a similar law, and you wish to discuss potential accommodations related to using this website, please contact us<p>
         <p style="margin-top: 1.5rem;"><a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms of Service</a></p>
     </footer>
     
