--- a/contact.html
+++ b/contact.html
@@ -178,7 +178,7 @@
                     <path d="M40 32 L30 24" stroke="url(#grad-email)" stroke-width="2" opacity="0.5" stroke-linecap="round"/>
                     <circle cx="24" cy="22" r="2" fill="url(#grad-email)" opacity="0.6"/>
                 </svg></span> Email</h3>
-                <p><a href="/cdn-cgi/l/email-protection#7a1e0854141d0f031f14541b090913090e1b140e3a1d171b131654191517"><span class="__cf_email__" data-cfemail="2145530f4f465458444f0f405252485255404f5561464c40484d0f424e4c">[email&#160;protected]</span></a></p>
+                <p>dr.nguyen.assistant@gmail.com</p>
             </div>
 
             <div class="info-item">
