--- a/expertise.html
+++ b/expertise.html
@@ -297,7 +297,7 @@
                     <p>Comprehensive acne management from adolescent to adult acne, including severe and treatment-resistant cases.</p>
                     <ul class="service-features">
                         <li>Topical and oral medications</li>
-                        <li>Advanced therapies including biologics</li>
+                        <li>Advanced therapies</li>
                         <li>Acne scar prevention and treatment</li>
                         <li>Personalized skincare regimens</li>
                     </ul>
