--- a/expertise.html
+++ b/expertise.html
@@ -197,7 +197,7 @@
                     <h3>Mohs Micrographic Surgery</h3>
                     <p>The gold standard for skin cancer treatment, offering the highest cure rates while preserving healthy tissue and optimizing cosmetic outcomes.</p>
                     <ul class="service-features">
-                        <li>99% cure rate for primary basal cell carcinoma</li>
+                        <li>99% cure rate for basal cell carcinoma and squamous cell carcinoma</li>
                         <li>Tissue-sparing precision</li>
                         <li>Same-day procedure and reconstruction</li>
                         <li>Optimal aesthetic results</li>
