--- a/about.html
+++ b/about.html
@@ -154,7 +154,7 @@
                 <h4>Education</h4>
                 <ul>
                     <li>MD: Texas A&M University College of Medicine</li>
-                    <li>MBA: University of Houston Clear Lake</li>
+                    <li>MBA: University of Houston</li>
                     <li>BS: The University of Texas at Austin</li>
                 </ul>
             </div>
