--- a/about.html
+++ b/about.html
@@ -155,7 +155,7 @@
                 <ul>
                     <li>MD: Texas A&M University College of Medicine</li>
                     <li>MBA: University of Houston</li>
-                    <li>BS: The University of Texas at Austin</li>
+                    <li>BS: University of Texas at Austin</li>
                 </ul>
             </div>
         </div>
