--- a/index.html
+++ b/index.html
@@ -408,6 +408,10 @@
                 font-size: 0.85rem; 
             }
         }
+        
+        @media (max-width: 480px) {
+            .logo { font-size: 0.9rem; }
+        }
     </style>
 </head>
 <body>
