--- a/about.html
+++ b/about.html
@@ -84,6 +84,10 @@
             .bio-section { grid-template-columns: 1fr; gap: 3rem; }
             .page-header h1 { font-size: 2.5rem; }
         }
+        
+        @media (max-width: 480px) {
+            .logo { font-size: 0.9rem; }
+        }
     </style>
 </head>
 <body>
@@ -155,7 +159,7 @@
                 <ul>
                     <li>MD: Texas A&M University College of Medicine</li>
                     <li>MBA: University of Houston</li>
-                    <li>BS: University of Texas at Austin</li>
+                    <li>BS: The University of Texas at Austin</li>
                 </ul>
             </div>
         </div>
