--- a/ads-leadership.html
+++ b/ads-leadership.html
@@ -302,6 +302,10 @@
             .message-content { padding: 2.5rem; }
             .vision-grid { grid-template-columns: 1fr; }
         }
+        
+        @media (max-width: 480px) {
+            .logo { font-size: 0.9rem; }
+        }
     </style>
 </head>
 <body>
