--- a/contact.html
+++ b/contact.html
@@ -82,10 +82,6 @@
             .nav-links.active { right: 0; }
             .nav-links a { font-size: 1.1rem; padding: 0.5rem 0; }
  .contact-container { grid-template-columns: 1fr; } .page-header h1 { font-size: 2.5rem; } }
-        
-        @media (max-width: 480px) {
-            .logo { font-size: 0.9rem; }
-        }
     </style>
 </head>
 <body>
@@ -182,7 +178,7 @@
                     <path d="M40 32 L30 24" stroke="url(#grad-email)" stroke-width="2" opacity="0.5" stroke-linecap="round"/>
                     <circle cx="24" cy="22" r="2" fill="url(#grad-email)" opacity="0.6"/>
                 </svg></span> Email</h3>
-                <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="caaeb8e4a4adbfb3afa4e4abb9b9a3b9beaba4be8aada7aba3a6e4a9a5a7">[email&#160;protected]</a></p>
+                <p>dr.nguyen.assistant@gmail.com</p>
             </div>
 
             <div class="info-item">
@@ -340,7 +336,7 @@
     </footer>
 
 
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+    <script>
         // Hamburger menu functionality
         const hamburger = document.querySelector('.hamburger');
         const navLinks = document.querySelector('.nav-links');
