--- a/contact.html
+++ b/contact.html
@@ -182,7 +182,7 @@
                     <path d="M40 32 L30 24" stroke="url(#grad-email)" stroke-width="2" opacity="0.5" stroke-linecap="round"/>
                     <circle cx="24" cy="22" r="2" fill="url(#grad-email)" opacity="0.6"/>
                 </svg></span> Email</h3>
-                <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="7c180e52121b09051912521d0f0f150f081d12083c1b111d1510521f1311">[email&#160;protected]</a></p>
+                <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="3c584e12525b49455952125d4f4f554f485d52487c5b515d5550125f5351">[email&#160;protected]</a></p>
             </div>
 
             <div class="info-item">
@@ -239,8 +239,7 @@
                     <circle cx="24" cy="24" r="16" fill="url(#grad-clock)" opacity="0.1"/>
                     <circle cx="24" cy="24" r="16" stroke="url(#grad-clock)" stroke-width="2.5" fill="none" filter="url(#glow-clock)"/>
                     <path d="M24 12 L24 24 L32 28" stroke="url(#grad-clock)" stroke-width="2.5" 
-                          stroke-linecap="round" stroke-linejoin="round" filter="url(#glow-clock)"/>
-                    <circle cx="24" cy="24" r="2.5" fill="url(#grad-clock)" filter="url(#glow-clock)"/>
+                          stroke-linecap="rounilter="url(#glow-clock)"/>
                     <circle cx="24" cy="8" r="1.5" fill="url(#grad-clock)"/>
                     <circle cx="24" cy="40" r="1.5" fill="url(#grad-clock)"/>
                     <circle cx="8" cy="24" r="1.5" fill="url(#grad-clock)"/>
@@ -340,7 +339,7 @@
     </footer>
 
 
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+    <script>
         // Hamburger menu functionality
         const hamburger = document.querySelector('.hamburger');
         const navLinks = document.querySelector('.nav-links');
@@ -367,4 +366,3 @@
     </script>
 </body>
 </html>
-    
