--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
         <div class="contact-form-section">
             <h3>Send a Message</h3>
             <form action="https://formspree.io/f/xbddjany" method="POST" id="contactForm">
-                <input type="hidden" name="_next" value="https://baomd.github.io/YOUR_REPO_NAME/thank-you.html">
+                <input type="hidden" name="_next" value="https://baomd.github.io/thank-you.html">
                 <input type="hidden" name="_subject" value="New Website Inquiry - Dr. Nguyen">
                 <input type="hidden" name="_formname" value="Dr. Quoc-Bao Nguyen's Office">
 
