--- a/contact.html
+++ b/contact.html
@@ -151,7 +151,7 @@
             }).then(response => {
                 if (response.ok) {
                     // SUCCESS: Manually go to your thank you page
-                    window.location.href = "https://baomd.github.io/thank-you.html";
+                    window.location.href = "https://baomd.us/thank-you.html";
                 } else {
                     response.json().then(data => {
                         status.style.display = "block";
