--- a/contact.html
+++ b/contact.html
@@ -114,6 +114,15 @@
                     <input type="email" name="email" id="email-address" required>
                 </div>
                 <div class="form-group">
+                    <label for="inquiry-type">Inquiry Type</label>
+                    <select name="inquiry" id="inquiry-type">
+                        <option value="Consultation">Schedule Consultation</option>
+                        <option value="Speaking">Speaking Engagement</option>
+                        <option value="BaoMD">BaoMD Skincare</option>
+                        <option value="Other">Other</option>
+                    </select>
+                </div>
+                <div class="form-group">
                     <label for="message">Message *</label>
                     <textarea name="message" id="message" required></textarea>
                 </div>
@@ -124,7 +133,6 @@
     </div>
 
     <script>
-        // 1. Mobile Menu Logic
         const hamburger = document.querySelector('.hamburger');
         const navLinks = document.querySelector('.nav-links');
         hamburger.addEventListener('click', () => {
@@ -132,13 +140,12 @@
             navLinks.classList.toggle('active');
         });
 
-        // 2. FORM SUBMISSION LOGIC (The "Magic" Fix)
         const form = document.getElementById("contactForm");
         const status = document.getElementById("statusMsg");
         const btn = document.getElementById("submitBtn");
 
         form.addEventListener("submit", async function(event) {
-            event.preventDefault(); // Stop the standard redirect
+            event.preventDefault();
             btn.disabled = true;
             btn.innerText = "Sending...";
 
@@ -150,7 +157,7 @@
                 headers: { 'Accept': 'application/json' }
             }).then(response => {
                 if (response.ok) {
-                    // SUCCESS: Manually go to your thank you page
+                    // UPDATED FOR CUSTOM DOMAIN baomd.us
                     window.location.href = "https://baomd.us/thank-you.html";
                 } else {
                     response.json().then(data => {
