--- a/ads-leadership.html
+++ b/ads-leadership.html
@@ -323,6 +323,7 @@
                 <li><a href="expertise.html">EXPERTISE</a></li>
                 <li><a href="speaking.html">SPEAKING</a></li>
                 <li><a href="ads-leadership.html" class="active">ADS LEADERSHIP</a></li>
+                <li><a href="blogs.html">BLOGS</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </div>
