--- a/expertise.html
+++ b/expertise.html
@@ -152,6 +152,7 @@
                 <li><a href="expertise.html" class="active">EXPERTISE</a></li>
                 <li><a href="speaking.html">SPEAKING</a></li>
                 <li><a href="ads-leadership.html">ADS LEADERSHIP</a></li>
+                <li><a href="blogs.html">BLOGS</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </div>
